--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,28 +12,24 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$api-primary: mat.define-palette(mat.$indigo-palette);
-$api-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$projectX-primary: mat.define-palette(mat.$indigo-palette);
+$projectX-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$api-warn: mat.define-palette(mat.$red-palette);
+$projectX-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$api-theme: mat.define-light-theme((
+$projectX-theme: mat.define-light-theme((
   color: (
-    primary: $api-primary,
-    accent: $api-accent,
-    warn: $api-warn,
+    primary: $projectX-primary,
+    accent: $projectX-accent,
+    warn: $projectX-warn,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($api-theme);
+@include mat.all-component-themes($projectX-theme);
 
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
